SERVER-10426 Do not return 'true' from comparator for equal items in merge sort